--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>Bienvenue sur Mon porfolio</h1>
+<h1>Bienvenue sur Mon projet</h1>
 <p>je suis en recherche alternance pas toute suite mais bientôt</p>
