--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<<<<<<< HEAD
-<h1>Bienvenue sur Mon projet</h1>
-<p>je suis en recherche alternance pas toute suite mais bientôt</p>
-=======
-<h1>Bienvenue sur Mon porfolio!!!</h1>
-<p>je suis en recherche alternance pas toute suite mais bientôt</p>
->>>>>>> refs/remotes/origin/main
+<h1>Bienvenue à mon porfolio</h1>
